<resources>
    <string name="app_name">Banking App</string>
    <string name="customer_bank_amount">$ %s</string>
    <string name="customer_e_mail">Customer E-mail:</string>
    <string name="customer_gender">Customer Gender:</string>
    <string name="available_balance">Available Balance:</string>
    <string name="bank_id">Bank ID:</string>
    <string name="transferMoneyBtnText">Transfer</string>
    <string name="transfer_money_message">"Transfer money to the selected customer "</string>
    <string name="confirmation_message_snackbar">"operation finished successfully"</string>
    <string name="cancel">Cancel</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="selected_money_amount_label">Enter the amount of money you want to transfer</string>
    <string name="_500">$500</string>
    <string name="edit_text_cannot_be_empty">please insert valid amount to transfer</string>
    <string name="viewAllCustomers">All Customers</string>
    <string name="transformations">Transformations</string>
    <string name="not_enough_balance">sorry, your blance is not enough</string>
    <string name="check">CHECK</string>
    <string name="customers">Customers</string>
    <string name="customer_details">Customer Details</string>
    <string name="operation_canceled">Operation has been canceld</string>
    <string name="ok">OK</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>